--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Application specific files
+venv
+node_modules
+.sass-cache
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
