--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"port": 8080,
 	"host": "0.0.0.0",
-	"rootPath": "/",
+	"rootPath": "/Users/Dimorinny/Documents/Web/Go/Dimginx",
 	"loggerEngines": ["STDOUT"]
 }
